--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,20 +10,28 @@ confinement: strict
 
 apps:
   hub-adapter-node:
-    command: bin/hub-adapter
+    command: bin/node $SNAP/index.js
 
 parts:
+  node:
+    plugin: dump
+    source: https://nodejs.org/dist/latest-v12.x/node-v12.20.2-linux-x64.tar.xz
+    stage:
+      - bin
+      - include
+      - lib
   adapter:
-    plugin: npm
+    plugin: nil
+    after: [node]
     source: .
-    npm-node-version: 14.15.5
     override-build: |
-      snapcraftctl build
-      npm config set unsafe-perm true
+      npm install
+      cp -a node_modules $SNAPCRAFT_PART_INSTALL/
+      cp index.js $SNAPCRAFT_PART_INSTALL/
 
 plugs:
   sockdir:
     interface: content
     content: sockdir
-    target: $SNAP_COMMON
+    target: $SNAP_COMMON/sockdir
     default-provider: thinghub:sockdir
